[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://game/kingdom_defense.gd" id="1"]
[ext_resource type="Script" path="res://game/grid_renderer.gd" id="2"]
[ext_resource type="Script" path="res://game/keyboard_display.gd" id="3"]
[ext_resource type="Script" path="res://game/camera_controller.gd" id="5"]
[ext_resource type="Script" path="res://game/minimap_renderer.gd" id="6"]
[ext_resource type="Script" path="res://ui/build_menu.gd" id="7"]

[node name="KingdomDefense" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="MainLayout" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopBar" type="Panel" parent="MainLayout"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0

[node name="HBox" type="HBoxContainer" parent="MainLayout/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 8.0
offset_right = -16.0
offset_bottom = -8.0
theme_override_constants/separation = 28

[node name="DayLabel" type="Label" parent="MainLayout/TopBar/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
text = "Day 1"

[node name="WaveLabel" type="Label" parent="MainLayout/TopBar/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Wave 1/3"

[node name="HPBar" type="HBoxContainer" parent="MainLayout/TopBar/HBox"]
layout_mode = 2

[node name="HPIcon" type="Label" parent="MainLayout/TopBar/HBox/HPBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
text = "HP:"

[node name="HPValue" type="Label" parent="MainLayout/TopBar/HBox/HPBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
text = "10/10"

[node name="GoldBar" type="HBoxContainer" parent="MainLayout/TopBar/HBox"]
layout_mode = 2

[node name="GoldIcon" type="Label" parent="MainLayout/TopBar/HBox/GoldBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
text = "Gold:"

[node name="GoldValue" type="Label" parent="MainLayout/TopBar/HBox/GoldBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
text = "0"

[node name="ResourceBar" type="HBoxContainer" parent="MainLayout/TopBar/HBox"]
layout_mode = 2

[node name="ResourcesLabel" type="Label" parent="MainLayout/TopBar/HBox/ResourceBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.6, 0.75, 0.6, 1)
text = "Wood: 10 | Stone: 5 | Food: 10"

[node name="Spacer" type="Control" parent="MainLayout/TopBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LessonLabel" type="Label" parent="MainLayout/TopBar/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
text = "Lesson: Home Row"

[node name="PhaseLabel" type="Label" parent="MainLayout/TopBar/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.4, 0.9, 0.4, 1)
text = "PLANNING"

[node name="ActLabel" type="Label" parent="MainLayout/TopBar/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.8, 0.7, 0.9, 1)
text = ""

[node name="MenuButton" type="Button" parent="MainLayout/TopBar/HBox"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Menu"

[node name="GameArea" type="Control" parent="MainLayout"]
layout_mode = 1
anchor_top = 0.045
anchor_right = 1.0
anchor_bottom = 0.736

[node name="MapArea" type="SubViewportContainer" parent="MainLayout/GameArea"]
layout_mode = 1
anchor_right = 0.78
anchor_bottom = 1.0
stretch = true

[node name="MapViewport" type="SubViewport" parent="MainLayout/GameArea/MapArea"]
handle_input_locally = false
size = Vector2i(1498, 1009)
render_target_update_mode = 4

[node name="Background" type="ColorRect" parent="MainLayout/GameArea/MapArea/MapViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.04, 0.08, 1)

[node name="GridRenderer" type="Node2D" parent="MainLayout/GameArea/MapArea/MapViewport"]
position = Vector2(20, 20)
script = ExtResource("2")
cell_size = Vector2(52, 52)
origin = Vector2(0, 0)

[node name="Camera" type="Camera2D" parent="MainLayout/GameArea/MapArea/MapViewport/GridRenderer"]
position_smoothing_enabled = true
position_smoothing_speed = 12.0
script = ExtResource("5")
pan_speed = 600.0
edge_pan_margin = 32
edge_pan_enabled = false
smooth_factor = 12.0
wasd_enabled = false
drag_enabled = true
game_area_ratio = 1.0
game_area_width_ratio = 1.0

[node name="RightSidebar" type="Panel" parent="MainLayout/GameArea"]
layout_mode = 1
anchor_left = 0.78
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0

[node name="SidebarContent" type="VBoxContainer" parent="MainLayout/GameArea/RightSidebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_constants/separation = 8

[node name="MinimapSection" type="VBoxContainer" parent="MainLayout/GameArea/RightSidebar/SidebarContent"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="MinimapTitle" type="Label" parent="MainLayout/GameArea/RightSidebar/SidebarContent/MinimapSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
text = "MAP"
horizontal_alignment = 1

[node name="MinimapContainer" type="CenterContainer" parent="MainLayout/GameArea/RightSidebar/SidebarContent/MinimapSection"]
layout_mode = 2

[node name="Minimap" type="Control" parent="MainLayout/GameArea/RightSidebar/SidebarContent/MinimapSection/MinimapContainer"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
script = ExtResource("6")
minimap_size = Vector2(180, 180)

[node name="Separator0" type="HSeparator" parent="MainLayout/GameArea/RightSidebar/SidebarContent"]
layout_mode = 2

[node name="EnemySection" type="VBoxContainer" parent="MainLayout/GameArea/RightSidebar/SidebarContent"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="EnemyTitle" type="Label" parent="MainLayout/GameArea/RightSidebar/SidebarContent/EnemySection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
text = "ENEMIES"
horizontal_alignment = 1

[node name="CurrentEnemy" type="Panel" parent="MainLayout/GameArea/RightSidebar/SidebarContent/EnemySection"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="CurrentLabel" type="RichTextLabel" parent="MainLayout/GameArea/RightSidebar/SidebarContent/EnemySection/CurrentEnemy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = -6.0
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "[center][color=yellow]TARGET[/color]
[color=orange]raider[/color]
HP: 3[/center]"

[node name="QueueLabel" type="Label" parent="MainLayout/GameArea/RightSidebar/SidebarContent/EnemySection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
text = "Incoming:"

[node name="QueueList" type="RichTextLabel" parent="MainLayout/GameArea/RightSidebar/SidebarContent/EnemySection"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "1. scout (HP:1)
2. raider (HP:2)"
scroll_active = false

[node name="Separator1" type="HSeparator" parent="MainLayout/GameArea/RightSidebar/SidebarContent"]
layout_mode = 2

[node name="ObjectiveSection" type="VBoxContainer" parent="MainLayout/GameArea/RightSidebar/SidebarContent"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ObjectiveTitle" type="Label" parent="MainLayout/GameArea/RightSidebar/SidebarContent/ObjectiveSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.5, 0.85, 1, 1)
text = "OBJECTIVE"
horizontal_alignment = 1

[node name="ObjectiveLabel" type="RichTextLabel" parent="MainLayout/GameArea/RightSidebar/SidebarContent/ObjectiveSection"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Build defenses!
Type [color=cyan]ready[/color] to start."
scroll_active = false

[node name="Separator2" type="HSeparator" parent="MainLayout/GameArea/RightSidebar/SidebarContent"]
layout_mode = 2

[node name="BuildSection" type="Control" parent="MainLayout/GameArea/RightSidebar/SidebarContent"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("7")

[node name="TitleLabel" type="Label" parent="MainLayout/GameArea/RightSidebar/SidebarContent/BuildSection"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
text = "BUILD"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainLayout/GameArea/RightSidebar/SidebarContent/BuildSection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 28.0
horizontal_scroll_mode = 0

[node name="Grid" type="GridContainer" parent="MainLayout/GameArea/RightSidebar/SidebarContent/BuildSection/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6

[node name="TooltipPanel" type="Panel" parent="MainLayout/GameArea/RightSidebar/SidebarContent/BuildSection"]
visible = false
z_index = 100
custom_minimum_size = Vector2(200, 0)
offset_left = -210.0
offset_right = -10.0
offset_bottom = 100.0

[node name="VBox" type="VBoxContainer" parent="MainLayout/GameArea/RightSidebar/SidebarContent/BuildSection/TooltipPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = -6.0
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="MainLayout/GameArea/RightSidebar/SidebarContent/BuildSection/TooltipPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.5, 0.85, 1, 1)
text = "Building Name"

[node name="DescLabel" type="Label" parent="MainLayout/GameArea/RightSidebar/SidebarContent/BuildSection/TooltipPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.8, 0.8, 0.85, 1)
text = "Description"
autowrap_mode = 2

[node name="CostLabel" type="Label" parent="MainLayout/GameArea/RightSidebar/SidebarContent/BuildSection/TooltipPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
text = "Cost: Wood: 10"
autowrap_mode = 2

[node name="TipLabel" type="Label" parent="MainLayout/GameArea/RightSidebar/SidebarContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.5, 0.75, 0.6, 1)
text = ""
horizontal_alignment = 1
autowrap_mode = 2

[node name="KeyboardArea" type="Control" parent="MainLayout"]
layout_mode = 1
anchor_top = 0.736
anchor_right = 1.0
anchor_bottom = 1.0

[node name="KeyboardBackground" type="ColorRect" parent="MainLayout/KeyboardArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.07, 0.1, 1)

[node name="LeftPanel" type="Panel" parent="MainLayout/KeyboardArea"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 8.0
offset_right = 320.0
offset_bottom = -8.0

[node name="DialogueContent" type="VBoxContainer" parent="MainLayout/KeyboardArea/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 10.0
offset_right = -12.0
offset_bottom = -10.0
theme_override_constants/separation = 8

[node name="PortraitContainer" type="CenterContainer" parent="MainLayout/KeyboardArea/LeftPanel/DialogueContent"]
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="MainLayout/KeyboardArea/LeftPanel/DialogueContent/PortraitContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="SpeakerLabel" type="Label" parent="MainLayout/KeyboardArea/LeftPanel/DialogueContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.5, 0.85, 1, 1)
text = ""

[node name="DialogueText" type="RichTextLabel" parent="MainLayout/KeyboardArea/LeftPanel/DialogueContent"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = ""
scroll_active = false

[node name="ContinueHint" type="Label" parent="MainLayout/KeyboardArea/LeftPanel/DialogueContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
text = ""
horizontal_alignment = 1

[node name="CenterArea" type="Control" parent="MainLayout/KeyboardArea"]
layout_mode = 1
anchor_left = 0.17
anchor_right = 0.83
anchor_bottom = 1.0

[node name="TypingBar" type="HBoxContainer" parent="MainLayout/KeyboardArea/CenterArea"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = 56.0
theme_override_constants/separation = 20

[node name="PromptLabel" type="Label" parent="MainLayout/KeyboardArea/CenterArea/TypingBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
text = "Type:"

[node name="InputField" type="LineEdit" parent="MainLayout/KeyboardArea/CenterArea/TypingBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
placeholder_text = "Type here..."
alignment = 1
caret_blink = true

[node name="InputDisplay" type="Label" parent="MainLayout/KeyboardArea/CenterArea/TypingBar"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.4, 0.95, 0.4, 1)
text = ""
horizontal_alignment = 2

[node name="KeyboardPanel" type="Control" parent="MainLayout/KeyboardArea/CenterArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 62.0
offset_right = -5.0
offset_bottom = -5.0
script = ExtResource("3")

[node name="RightPanel" type="Panel" parent="MainLayout/KeyboardArea"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = -8.0

[node name="InfoContent" type="VBoxContainer" parent="MainLayout/KeyboardArea/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
theme_override_constants/separation = 8

[node name="WordDisplay" type="RichTextLabel" parent="MainLayout/KeyboardArea/RightPanel/InfoContent"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center][color=yellow]TARGET[/color][/center]"
scroll_active = false

[node name="StatsGrid" type="GridContainer" parent="MainLayout/KeyboardArea/RightPanel/InfoContent"]
layout_mode = 2
columns = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 6

[node name="WPMLabel" type="Label" parent="MainLayout/KeyboardArea/RightPanel/InfoContent/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
text = "WPM:"

[node name="WPMValue" type="Label" parent="MainLayout/KeyboardArea/RightPanel/InfoContent/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.4, 0.95, 0.4, 1)
text = "0"

[node name="AccLabel" type="Label" parent="MainLayout/KeyboardArea/RightPanel/InfoContent/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
text = "Accuracy:"

[node name="AccValue" type="Label" parent="MainLayout/KeyboardArea/RightPanel/InfoContent/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.5, 0.85, 1, 1)
text = "100%"

[node name="ComboLabel" type="Label" parent="MainLayout/KeyboardArea/RightPanel/InfoContent/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
text = "Combo:"

[node name="ComboValue" type="Label" parent="MainLayout/KeyboardArea/RightPanel/InfoContent/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
text = "0"

[node name="PowerLabel" type="Label" parent="MainLayout/KeyboardArea/RightPanel/InfoContent/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
text = "Power:"

[node name="PowerValue" type="Label" parent="MainLayout/KeyboardArea/RightPanel/InfoContent/StatsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
text = "1.0x"

[node name="FingerHintLabel" type="Label" parent="MainLayout/KeyboardArea/RightPanel/InfoContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
text = ""
horizontal_alignment = 1
autowrap_mode = 2
